# snakyMcSnakeTerm

./: README.md  snakyMcSnakeTerm.cabal  stack.yaml
src/: Constants.hs  Main.hs  State.hs  Types.hs  View.hs
