name:                snakyMcSnakeTerm
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/snakyMcSnakeTerm#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable snakyMcSnakeTerm
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options: -threaded -O2 -Wall
  build-depends:       base >= 4.8 && < 5
                     , brick >= 0.10 && < 0.11
                     , vty >= 5.8 && < 5.9
                     , containers >= 0.5 && < 0.6
                     , data-default >= 0.5 && < 0.6
                     , microlens >= 0.4 && < 0.5
                     , microlens-th >= 0.4 && < 0.5
                     , random >= 1.1 && < 1.2
